--- a/DoItAgain/Views/Employees/Index.cshtml
+++ b/DoItAgain/Views/Employees/Index.cshtml
@@ -61,7 +61,7 @@
     </table>
 </form>
 
-<div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
+@*<div id="wrapper-9cd199b9cc5410cd3b1ad21cab2e54d3">
     <div id="map-9cd199b9cc5410cd3b1ad21cab2e54d3"></div>
     <script>
         (function () {
@@ -78,4 +78,4 @@
         })();
         </script>
     <a href="https://1map.com/map-embed?embed_id=103706">1map.com</a>
-</div>
+</div>*@
